--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.antipipison.tasks.NewTask"
-    android:columnCount="2">
-
-    <TextView
-        android:text="Название"/>
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:layout_margin="10dp"
+        android:hint="Name"
         android:inputType="textPersonName" />
 
-    <TextView
-        android:text="Интервал (минуты)"/>
+    <GridLayout
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:columnCount="3">
 
-    <EditText
-        android:id="@+id/intervalEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number"/>
+        <TextView android:text="Days"/>
+        <TextView android:text="Hours"/>
+        <TextView android:text="Minutes"/>
+        <NumberPicker android:id="@+id/daysPicker"/>
+        <NumberPicker android:id="@+id/hoursPicker"/>
+        <NumberPicker android:id="@+id/minutesPicker"/>
 
-</GridLayout>
+    </GridLayout>
+
+</LinearLayout>
